﻿# CHANGELOG #
This changelog lists all changes made to MTA DayZ. It adheres to the following features description.

## [VERSION] - DATE OF RELEASE (YYYY-MM-DD)
## Please add your change on rollingchangelog.txt.

## [Upcoming release] - DATE OF RELEASE (Unknown)
### CHANGED: Updated how Helicrashes and hospital bags were being initialised.
### ADDED: Petrol stations now have a limited amount of fuel (between 1 - 15 jerry cans worth).
### CHANGED: Version rewrite, tree handling optimised.

## [0.9.8.1] - DATE OF RELEASE (2017-02-18)
### NEW: Version check system
### FIXED: Vehicle unusable in admin panel after respawn
### FIXED: Possibility to eat weapons as they were food
### FIXED: Foods can't be eaten from inside loot collision sphere
### FIXED: Body temperature keeps rising when unconscious bug
### DEPRECATED: showPlayerHudComponent is now setPlayerHudComponentVisible

## [0.9.8a] - 2016-07-06 (YOU NEED REMOVE YOUR INTERNAL.DB FOR THIS UPDATE)
### NEW: Advanced Clothes System (+60 clothes)
### NEW: Beard and Hair System
### NEW: Weight System
### NEW: Interior System (with 4 interiors for the moment)
### ADDED: Add variable "weight_food" on "CfgServer.lua"
### ADDED: Add variable "weight_thirst" on "CfgServer.lua"
### ADDED: Add variable "weight_loose" on "CfgServer.lua"
### ADDED: Add variable "weight_loosetimer" on "CfgServer.lua"

# CLOTHES #

### ADDED: Military collar
### ADDED: Africa collar
### ADDED: Gold collar
### ADDED: Silver collar
### ADDED: LS collar
### ADDED: Black Bandana (M)
### ADDED: Blue Bandana (M)
### ADDED: Green Bandana (M)
### ADDED: Red Bandana (M)
### ADDED: Black Bandana (H)
### ADDED: Blue Bandana (H)
### ADDED: Green Bandana (H)
### ADDED: Red Bandana (H)
### ADDED: Black Beret
### ADDED: Red Beret
### ADDED: Old Hat
### ADDED: Black Hat
### ADDED: Yellow Hat
### ADDED: Black Trucker
### ADDED: Blue Trucker
### ADDED: Green Trucker
### ADDED: Red Trucker
### ADDED: Yellow Trucker
### ADDED: Cow-Boy Hat
### ADDED: White Hat