@@ -35,6 +35,10 @@ function showJournal()
 			addEventHandler("onClientMouseEnter",JournalTable.label[5],writeSelected,false)
 			addEventHandler("onClientMouseLeave",JournalTable.label[5],writeDeselected,false)
 			addEventHandler("onClientGUIClick",JournalTable.label[5],openWriteJournal,false)
+			addEventHandler("onClientGUIClick",JournalTable.label[7],function()
+				guiMoveToBack(JournalTable.image[1])
+				loadList()
+			end,false)
 			addEventHandler("onClientGUIClick",JournalTable.button[1],writeIntoJournal,false)
 			addEventHandler("onClientGUIClick",JournalTable.button[2],closeWriteJournal,false)
 			unbindKey("J","down",initInventory)
@@ -45,6 +49,7 @@ function showJournal()
 			removeEventHandler("onClientMouseEnter",JournalTable.label[5],writeSelected)
 			removeEventHandler("onClientMouseLeave",JournalTable.label[5],writeDeselected)
 			removeEventHandler("onClientGUIClick",JournalTable.label[5],openWriteJournal)
+			removeEventHandler("onClientGUIClick",JournalTable.label[7],loadList)
 			removeEventHandler("onClientGUIClick",JournalTable.button[1],writeIntoJournal)
 			removeEventHandler("onClientGUIClick",JournalTable.button[2],closeWriteJournal)
 			bindKey("J","down",initInventory)
@@ -87,6 +92,11 @@ function initJournal()
 	guiLabelSetColor(JournalTable.label[5],0,0,0)
 	guiLabelSetHorizontalAlign(JournalTable.label[5], "left", true)
 	guiSetFont(JournalTable.label[5],font[2])
+
+	JournalTable.label[7] = guiCreateLabel(0.75, 0.89, 0.21, 0.05, "Achievements", true, JournalTable.image[1])
+	guiLabelSetColor(JournalTable.label[7],0,0,0)
+	guiLabelSetHorizontalAlign(JournalTable.label[7], "left", true)
+	guiSetFont(JournalTable.label[7],font[2])
 	
 	JournalTable.window[1] = guiCreateWindow(0.24, 0.14, 0.52, 0.80, "Write into Journal", true)
 	guiWindowSetMovable(JournalTable.window[1], false)
