@@ -5,8 +5,9 @@ This changelog lists all changes made to MTA DayZ. It adheres to the following f
 ## Please add your change on rollingchangelog.txt.
 
 ## [Upcoming release] - DATE OF RELEASE (Unknown)
-### CHANGED: Updated how Helicrashes and hospital bags were being initialised.
 ### ADDED: Petrol stations now have a limited amount of fuel (between 1 - 15 jerry cans worth).
+### ADDED: Achievement System
+### CHANGED: Updated how Helicrashes and hospital bags were being initialised.
 ### CHANGED: Version rewrite, tree handling optimised.
 
 ## [0.9.8.1] - DATE OF RELEASE (2017-02-18)
